--- a/bagelbot/package.json
+++ b/bagelbot/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.731.0",
+    "@aws-sdk/lib-dynamodb": "^3.731.0",
     "@slack/bolt": "^4.2.0",
     "dotenv": "^16.4.7"
   }
